--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.04MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇨🇳 中国-8.14MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: ea43d5df-84ec-3a33-b625-6c08ff6ece57, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇨🇳 中国-322.6KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-348.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: f5ff683a-c1f1-4b58-a80b-b83199d86d2b, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.41MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇨🇳 台湾-13.05MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.13MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 未知国家-3.20MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 77a81e4d-2f3d-4005-857e-4ba60140a539, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: vietnam.hn15.shopvpn.net}}
+  - {name: 🇨🇳 中国-15.31MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-5.53MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇸🇬 新加坡-8.92MB/s(Youtube:不良林), server: 139.162.45.81, port: 13236, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
