--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-13.05MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.13MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-15.31MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇨🇳 中国-13.40MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-265.5KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-797.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.02MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-5.53MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-797.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.02MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
