--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-6.79MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇫🇷 法国-1.42MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-10.86MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.58MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-804.6KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-437.5KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-503.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.59MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.33MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-396.6KB/s(Youtube:不良林), server: 626sg.ok365.cyou, port: 443, type: trojan, password: f5ff683a-c1f1-4b58-a80b-b83199d86d2b, sni: 626sg.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
+  - {name: 🇨🇳 中国-9.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-804.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-437.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
